Fixed overflowing images

--- a/app/assets/scss/components/_presentation.scss
+++ b/app/assets/scss/components/_presentation.scss
@@ -161,6 +161,7 @@
 	}
 	.media {
 		grid-area: media;
+		min-height: 0;
 
 		img {
 			border-radius: 0.5rem;
@@ -170,6 +171,10 @@
 	figure.media {
 		display: grid;
 		place-items: center;
+		img {
+			min-height: 0;
+			max-height: 100%;
+		}
 	}
 
 	@include typography.base;
